--- a/Note/AndroidManifest.xml
+++ b/Note/AndroidManifest.xml
@@ -8,13 +8,14 @@
         android:targetSdkVersion="18" />
 
     <application
+        android:name="com.note.util.NoteApplication"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         
         <activity 
-            android:name="com.database.test.MainActivity">
+            android:name="com.note.activity.MainActivity">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
