--- a/Note/AndroidManifest.xml
+++ b/Note/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.database"
+    package="com.note.activity"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -12,15 +12,17 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.NoTitleBar" >
         
         <activity 
-            android:name="com.note.activity.MainActivity">
+            android:name="com.note.activity.Splash">
             <intent-filter >
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        
+        <activity android:name="com.note.activity.MainActivity"/>
     </application>
 
 </manifest>
